app/stylesheets/_compare.scss
.compare-page {
  .compare-body {
    margin-top: 50px;
    display: flex;

    .compare-left {
      flex: 1;
      padding: 0 20px;

      .search-existing-drug {
        width: 100%;

        .form-group {
          display: block;
        }
      }

      .existing-drugs-list {
        margin: 0;
        margin-top: 30px;
        padding: 0;
        list-style-type: none;
        width: $list-width;
      }

      .existing-drug {
        overflow: hidden;
        background: $drug-gray-background;
        padding: 12px;
        padding-right: 0;
        line-height: 1;
        width: $list-width;
        margin-top: 7px;
        display: flex;
        align-items: center;

        > span {
          flex: 1;
        }
      }
    }

    .compare-right {
      flex: 1;
      padding: 0 20px;

      .search-new-drug {
        width: 100%;
        .form-group {
          display: block;
        }
      }

      .new-drug {
        overflow: hidden;
        background-color: #CFDCE1;
        padding: 12px;
        padding-right: 0;
        line-height: 1;
        width: $list-width;
        margin-top: 30px;
        display: flex;
        align-items: center;

        > span {
          flex: 1;
        }
      }
    }

    .search-string {
      color: $text-color;
      text-transform: capitalize;
    }

    .corrected-string {
      color: $text-alt-color;
      text-transform: capitalize;
    }

    .delete {
      display: flex;
      justify-content: center;
      width: $search-button-width;
      padding-right: 3px;

      &:hover {
        text-decoration: none;
      }

      .small-x {
        color: $text-alt-color;
      }
    }
  }

  .compare-footer {
    display: flex;
    justify-content: center;
    margin-top: 35px;

    .view-side-effects {
      background-color: $light-blue;
      border-radius: 56px;
      width: 200px;
      line-height: 56px;
      color: $text-color;
      font-size: 18px;
      font-weight: 600;
      text-align: center;
      cursor: pointer;
      border: none;
      padding: 0;
      outline: none;

      &:hover {
        color: $white;
        text-decoration: none;
        background-color: $hover-gray;
      }
      &:disabled {
        background: $black;
        color: $white;
        opacity: 0.1;
      }
    }
  }
}

@media (max-width: $break-width) {
  .compare-page {
    .compare-body {
      flex-flow: column nowrap;
      margin: 0;

      .form-group {
        margin-bottom: 8px;
      }

      .compare-left {
        .existing-drugs-list {
          display: flex;
          flex-flow: row wrap;
          justify-content: space-between;

          li {
            flex-basis: calc(50% - 4px);
            margin-bottom: 8px;

            .existing-drug {
              margin: 0;
            }
          }
        }
      }

      .compare-right {
        margin-top: 30px;

        .search-new-drug label:before {
          content: 'And ';
        }
      }

      .existing-drug, .new-drug {
        span {
          overflow: hidden;
          text-overflow: ellipsis;
          white-space: nowrap;
        }
      }
    }
  }
}

